Fix gallery with wrap_content and max_size

--- a/client/web/divkit/src/components/gallery/Gallery.module.css
+++ b/client/web/divkit/src/components/gallery/Gallery.module.css
@@ -8,6 +8,10 @@
     width: 100%;
     height: 100%;
 
+    /** inherit max_size from parent node (100% may be bigger than the actual size of the parent) */
+    max-width: inherit;
+    max-height: inherit;
+
     -webkit-overflow-scrolling: touch;
     scrollbar-width: none;
 }
